Move SOAP refresh token to dedicated route
